updating references with wwf (section 1-introduction)

--- a/eso-references/eso-references.bib
+++ b/eso-references/eso-references.bib
@@ -1,5 +1,55 @@
 
+@online{center_for_history_and_new_media_zotero_????,
+	title = {Zotero Quick Start Guide},
+	url = {http://zotero.org/support/quick_start_guide},
+	author = {{Center for History and New Media}},
+	annotation = {Welcome to {Zotero!View} the Quick Start Guide to learn how to begin collecting, managing, citing, and sharing your research {sources.Thanks} for installing Zotero.}
+}
+
+@article{wwf_living_????,
+	title = {Living Planet Report 2013 Infographic},
+	url = {http://wwf.panda.org/about_our_earth/all_publications/living_planet_report/2013_infographic/},
+	author = {{WWF}}
+}
+
+@online{__????
+}
+
 @article{rising_scrum_2000,
+	title = {The Scrum Software Development Process for Small Teams},
+	volume = {17},
+	issn = {0740-7459},
+	doi = {http://doi.ieeecomputersociety.org/10.1109/52.854065},
+	pages = {26-32},
+	number = {4},
+	author = {Rising, Linda and Janoff, Norman S.},
+	date = {2000}
+}
+
+@book{__????-1
+}
+
+@report{wwf_living_????-1,
+	title = {Living Planet Report 2013 Infographic},
+	url = {http://wwf.panda.org/about_our_earth/all_publications/living_planet_report/2013_infographic/},
+	author = {{WWF}}
+}
+
+@book{__????-2
+}
+
+@article{rising_scrum_2000-1,
+	title = {The Scrum Software Development Process for Small Teams},
+	volume = {17},
+	issn = {0740-7459},
+	doi = {http://doi.ieeecomputersociety.org/10.1109/52.854065},
+	pages = {26-32},
+	number = {4},
+	author = {Rising, Linda and Janoff, Norman S.},
+	date = {2000}
+}
+
+@article{rising_scrum_2000-2,
 	title = {The Scrum Software Development Process for Small Teams},
 	volume = {17},
 	issn = {0740-7459},
