added bibliographic references

--- a/eso-references/eso-references.bib
+++ b/eso-references/eso-references.bib
@@ -1,4 +1,48 @@
 
+@book{swebok:2004,
+  added-at = {2009-10-14T21:30:02.000+0200},
+  address = {EUA},
+  author = {{IEEE Computer Society}},
+  biburl = {http://www.bibsonomy.org/bibtex/269a091add31b01e141e2a0df70c1ddd4/magsilva},
+  editor = {Bourque, Pierre and Dupuis, Robert},
+  interhash = {7d2dfdece902658cf0c67159d0492313},
+  intrahash = {69a091add31b01e141e2a0df70c1ddd4},
+  keywords = {imported},
+  owner = {Marco Aurélio Graciotto Silva},
+  publisher = {Angela Burgess},
+  timestamp = {2009-10-14T21:30:02.000+0200},
+  title = {Software Engineering Body of Knowledge (SWEBOK)},
+  url = {http://www.swebok.org/},
+  year = 2004
+}
+
+@misc{chaos_report:2013,
+	url = {http://www.standishgroup.com/chaos_news/newsletter.php?id=54},
+	author = {Standish Group},
+	year = 2013
+}
+
+@misc{scrum_guide:2013,
+	title = {The Scrum Guide},
+	url = {https://www.scrum.org/Portals/0/Documents/Scrum\%20Guides/2013/Scrum-Guide.pdf},
+	author = "Ken Schwaber and Jeff Sutherland",
+	year = 2013
+}
+
+@misc{endo_testing:2000,
+	title = {Endo-Testing: Unit Testing with Mock Objects},
+	author = {Tim Mackinnon and Steve Freeman and Philip Craig},
+	url = {http://instinct.googlecode.com/svn/tags/Release-0.1.6/core/docs/reference/endotesting.pdf},
+	year = 2000
+}
+
+@article{quality_impr_tdd:2008,
+	title = {Realizing quality improvement through test driven development: results and experiences of four industrial teams},
+	journal = {Springer Science + Business Media, LLC 2008},
+	author = {Nachiappan Nagappan and E. Michael Maximilien and Thirumalesh Bhat and Laurie Willians},
+	year = 2008 
+}
+
 @online{center_for_history_and_new_media_zotero_????,
 	title = {Zotero Quick Start Guide},
 	url = {http://zotero.org/support/quick_start_guide},
@@ -59,3 +103,5 @@
 	author = {Rising, Linda and Janoff, Norman S.},
 	date = {2000}
 }
+
+
