--- a/eso-references/eso-references.bib
+++ b/eso-references/eso-references.bib
@@ -10,21 +10,14 @@
 	date = {2000}
 }
 
-@online{center_for_history_and_new_media_zotero_????,
-	title = {Zotero Quick Start Guide},
-	url = {http://zotero.org/support/quick_start_guide},
-	author = {{Center for History and New Media}},
-	annotation = {Welcome to {Zotero!View} the Quick Start Guide to learn how to begin collecting, managing, citing, and sharing your research {sources.Thanks} for installing Zotero.}
-}
-
 @article{wwf_living_????,
 	title = {Living Planet Report 2013 Infographic},
 	url = {http://wwf.panda.org/about_our_earth/all_publications/living_planet_report/2013_infographic/},
 	author = {{WWF}}
 }
 
-@report{wwf_living_????-1,
-	title = {Living Planet Report 2013 Infographic},
-	url = {http://wwf.panda.org/about_our_earth/all_publications/living_planet_report/2013_infographic/},
-	author = {{WWF}}
+@article{barry_boehm_using_2003,
+	title = {Using Risk to Balance Agile and Plan-Driven Methods},
+	author = {{Barry Boehm} and {Richard Turner}},
+	date = {2003-06}
 }
