--- a/eso-references/eso-references.bib
+++ b/eso-references/eso-references.bib
@@ -112,3 +112,12 @@
 	author = {{Barry Boehm} and {Richard Turner}},
 	date = {2003-06}
 }
+
+@online{acm_conversation:2006,
+	title = {A Conversation with Werner Vogels},
+	author = {Association for Computing Machinery},
+	month = jun,
+	year = {2006},
+	day = {30},
+	url = {https://queue.acm.org/detail.cfm?id=1142065}
+}
