Documenting references in bibtex format

--- a/eso-references/eso-references.bib
+++ b/eso-references/eso-references.bib
@@ -1,4 +1,4 @@
-
+﻿
 @book{swebok:2004,
   added-at = {2009-10-14T21:30:02.000+0200},
   address = {EUA},
@@ -120,4 +120,72 @@
 	year = {2006},
 	day = {30},
 	url = {https://queue.acm.org/detail.cfm?id=1142065}
+}
+
+@online{us_o_q_sao_como_usar:2011,
+	title = {User Stories – O que são? Como Usar?},
+	author = {Glauco Primo},
+	year = {2011},
+	month = oct,
+	day = {10},
+	url = {http://blog.myscrumhalf.com/2011/10/user-stories-o-que-sao-como-usar/}
+}
+
+@book{evans2004domaindriven,
+	added-at = {2012-11-30T18:04:27.000+0100},
+	address = {Boston},
+	author = {Evans, Eric},
+	biburl = {http://www.bibsonomy.org/bibtex/2ab64eca0f621f0994e28e7f7032f8bab/ideeq},
+	interhash = {687d2fb811c16a1c446815bbfae35b8d},
+	intrahash = {ab64eca0f621f0994e28e7f7032f8bab},
+	isbn = {0321125215 9780321125217},
+	keywords = {design domain},
+	publisher = {Addison-Wesley},
+	refid = {52134890},
+	timestamp = {2012-11-30T18:04:27.000+0100},
+	title = {Domain-driven design : tackling complexity in the heart of software},
+	url = {http://www.worldcat.org/search?qt=worldcat_org_all&q=0321125215},
+	year = 2004
+}
+
+@online{criterios_aceitacao_us:2011,
+	title = {Critérios de Aceitação das User Stories},
+	author = {Ester Lima},
+	year = {2011},
+	month = oct,
+	day = 17,
+	url = {http://blog.myscrumhalf.com/2011/10/criterios-de-aceitacao-das-user-stories/}
+}
+
+@misc{ieee830:1998,
+	added-at = {2009-10-14T21:30:02.000+0200},
+	author = {{Institute of Electrical and Electronics Engineers}},
+	biburl = {http://www.bibsonomy.org/bibtex/2b3cce43453735c62f5c33c1361e61aee/magsilva},
+	interhash = {dbd2241380ac83875f1f2797691eec64},
+	intrahash = {b3cce43453735c62f5c33c1361e61aee},
+	keywords = {imported},
+	month = {June},
+	owner = {magsilva},
+	timestamp = {2009-10-14T21:30:02.000+0200},
+	title = {IEEE Recommended Practice for Software Requirements Specifications
+		(IEEE Std 830-1998)},
+	year = 1998
+}
+
+@incollection{melnik2007multiple,
+	title={Multiple perspectives on executable acceptance test-driven development},
+	author={Melnik, Grigori and Maurer, Frank},
+	booktitle={Agile Processes in Software Engineering and Extreme Programming},
+	pages={245--249},
+	year={2007},
+	publisher={Springer}
+}
+
+@online{agile2009intentional,
+	title = {Agile Design: Intentional Yet Emergent},
+	author = {Mike Cohn},
+	year = {2009},
+	month = dec,
+	day = {4},
+	url = {http://www.mountaingoatsoftware.com/blog/agile-design-intentional-yet-emergent/}
 }
