--- a/eso-references/eso-references.bib
+++ b/eso-references/eso-references.bib
@@ -50,7 +50,7 @@
 	annotation = {Welcome to {Zotero!View} the Quick Start Guide to learn how to begin collecting, managing, citing, and sharing your research {sources.Thanks} for installing Zotero.}
 }
 
-@article{wwf_living_????,
+@article{wwf_living:2013,
 	title = {Living Planet Report 2013 Infographic},
 	url = {http://wwf.panda.org/about_our_earth/all_publications/living_planet_report/2013_infographic/},
 	author = {{WWF}}
@@ -68,12 +68,6 @@
 	number = {4},
 	author = {Rising, Linda and Janoff, Norman S.},
 	date = {2000}
-}
-
-@article{wwf_living_????,
-	title = {Living Planet Report 2013 Infographic},
-	url = {http://wwf.panda.org/about_our_earth/all_publications/living_planet_report/2013_infographic/},
-	author = {{WWF}}
 }
 
 @book{__????-2
@@ -189,3 +183,22 @@
 	day = {4},
 	url = {http://www.mountaingoatsoftware.com/blog/agile-design-intentional-yet-emergent/}
 }
+
+@inproceedings{Bjarnason:2011:CSB:2068783.2068786,
+	author = {Bjarnason, Elizabeth and Wnuk, Krzysztof and Regnell, Bj\"{o}rn},
+	title = {A Case Study on Benefits and Side-effects of Agile Practices in Large-scale Requirements Engineering},
+	booktitle = {Proceedings of the 1st Workshop on Agile Requirements Engineering},
+	series = {AREW '11},
+	year = {2011},
+	isbn = {978-1-4503-0890-8},
+	location = {Lancaster, United Kingdom},
+	pages = {3:1--3:5},
+	articleno = {3},
+	numpages = {5},
+	url = {http://doi.acm.org/10.1145/2068783.2068786},
+	doi = {10.1145/2068783.2068786},
+	acmid = {2068786},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {agile, case study, empirical study, requirements engineering},
+} 
