--- a/eso-references/eso-references.bib
+++ b/eso-references/eso-references.bib
@@ -202,3 +202,23 @@
 	address = {New York, NY, USA},
 	keywords = {agile, case study, empirical study, requirements engineering},
 } 
+
+@article{Shaban-Nejad:2009:MRV:1512638.1614190,
+	author = {Shaban-Nejad, Arash and Ormandjieva, Olga and Kassab, Mohamad and Haarslev, Volker},
+	title = {Managing Requirement Volatility in an Ontology-driven Clinical LIMS Using Category Theory},
+	journal = {Int. J. Telemedicine Appl.},
+	issue_date = {January 2009},
+	volume = {2009},
+	month = jan,
+	year = {2009},
+	issn = {1687-6415},
+	pages = {8:1--8:14},
+	articleno = {8},
+	numpages = {14},
+	url = {http://dx.doi.org/10.1155/2009/917826},
+	doi = {10.1155/2009/917826},
+	acmid = {1614190},
+	publisher = {Hindawi Publishing Corp.},
+	address = {New York, NY, United States},
+}
+
