Adaptations in bibliography files

--- a/eso-references/eso-references.bib
+++ b/eso-references/eso-references.bib
@@ -222,3 +222,40 @@
 	address = {New York, NY, United States},
 }
 
+@inproceedings{Begel:2008:PPW:1414004.1414026,
+	author = {Begel, Andrew and Nagappan, Nachiappan},
+	title = {Pair Programming: What's in It for Me?},
+	booktitle = {Proceedings of the Second ACM-IEEE International Symposium on Empirical Software Engineering and Measurement},
+	series = {ESEM '08},
+	year = {2008},
+	isbn = {978-1-59593-971-5},
+	location = {Kaiserslautern, Germany},
+	pages = {120--128},
+	numpages = {9},
+	url = {http://doi.acm.org/10.1145/1414004.1414026},
+	doi = {10.1145/1414004.1414026},
+	acmid = {1414026},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {developers, empirical studies, pair programming, survey experiments},
+}
+
+@inproceedings{Sukarno:2011:CIB:2095697.2095704,
+	author = {Sukarno, Parman and Bhattacharjee, Nandita and Srinivasan, Bala},
+	title = {On the Commonality of Iris Biometrics},
+	booktitle = {Proceedings of the 9th International Conference on Advances in Mobile Computing and Multimedia},
+	series = {MoMM '11},
+	year = {2011},
+	isbn = {978-1-4503-0785-7},
+	location = {Ho Chi Minh City, Vietnam},
+	pages = {19--25},
+	numpages = {7},
+	url = {http://doi.acm.org/10.1145/2095697.2095704},
+	doi = {10.1145/2095697.2095704},
+	acmid = {2095704},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {common substring, commonality, fuzziness, iris biometric, metric},
+} 
+
+
