Making an experiment with the \cite command

--- a/latex-files/sbc-template.tex
+++ b/latex-files/sbc-template.tex
@@ -48,7 +48,7 @@
 Nos dias atuais, poucas coisas são mais importantes para a Humanidade quanto a
 questão da ecologia. Na proporção em que crescemos enquanto espécie, a projeção
 média de crescimento da população mundial é de 9 bilhões de pessoas até 2050.
-[WWF 2013] Esse crescimento populacional influi diretamente nas condições de
+\cite{wwf_living:2013} Esse crescimento populacional influi diretamente nas condições de
 vida no planeta.
 
 Desta forma, no que concerne à área de atuação da MotorBRAS, a redução no
@@ -342,7 +342,7 @@ na especificação, seja alterando ou adicionando novos itens. Tal item, então,
 precisa ser definido em forma de história e com prioridade, para ingressar numa
 próxima iteração, seguindo o mesmo fluxo de um novo requisito. Desta forma,
 incorporando correções no fluxo normal de desenvolvimento (e não após todo o
-projeto ter terminado), procura-se eliminar o problema onde 80% do esforço de
+projeto ter terminado), procura-se eliminar o problema onde 80\% do esforço de
 manutenção é gasto em ações não corretivas. Neste caso, a manutenção acontece
 enquanto o projeto ainda existe, e a prioridade fica a cargo dos stakeholders. 
 
