--- a/eso-project.tex
+++ b/eso-project.tex
@@ -16,11 +16,11 @@
 }
 
 \IEEEcompsoctitleabstractindextext{%
-%\begin{abstract}
-%Abstract aqui
-%\end{abstract}
+\begin{abstract}
+Nos dias atuais, o software está envolvido em todas as atividades, de processadores de texto a operações de naves espaciais. Num cenário onde os aplicativos apoiam praticamente todas as atividades humanas, é esperado que haja muita demanda de software em uma das indústrias mais tradicionais: a automobilística. Associada a outra preocupação constante - o impacto no meio-ambiente -, este trabalho apresenta uma proposta para adição de valor, por meio de tecnologias de software, à seção de carros elétricos da empresa automobilística fictícia MotorBRAS. Expõe-se uma forma de aplicação de técnicas de engenharia de software que visam a geração de tecnologia para apoio à evolução do negócio, por meio de organização de um setor de desenvolvimento que aplique as devidas técnicas.  
+\end{abstract}
 \begin{IEEEkeywords}
-  Engenharia de Software, SWEBOK
+Engenharia de Software, SWEBOK
 \end{IEEEkeywords}}
 
 \maketitle
@@ -174,6 +174,8 @@ Portanto, é responsabilidade da gerência de configuração gerar os releases/b
 
 \subsection{Gerenciamento de Engenharia de Software}
 
+
+
 referencia 
   http://www.amazon.com/Agile-Project-Management-Creating-Innovative/dp/0321658396
 
@@ -197,6 +199,9 @@ ver zotero - para gerenciamento de referencias
 
 
 \subsection{Gerenciamento de Processo de Software}
+
+
+
 
 Justificar agile: 
 http://audacium.com/wp-content/uploads/2012/08/Gartner-Agile-Maturity-Model.pdf
