adding hierarchy issues (subsection)

--- a/eso-project.tex
+++ b/eso-project.tex
@@ -239,12 +239,12 @@ O Scrum define times de desenvolvimento dispostos entre células mutidisciplinar
 Os analistas de requisitos precisam ter um forte entendimento do negócio e das tendências da empresa, bem como acesso livre aos stackholders. Caberá aos Analistas, juntamente com os Product Owners de cada célula, a função de interagir com os Stakeholders e definir limites e restrições necessárias para o andamento do projeto.
 
 
-\section{Ferramentas e Métodos}
+\subsection{Ferramentas e Métodos}
 
 todo: add info here
 
 
-\section{Qualidade de Software}
+\subsection{Qualidade de Software}
 
 todo: add info here
 
