adjusting reference (url shortening)

--- a/eso-project.bib
+++ b/eso-project.bib
@@ -9,7 +9,7 @@
 	author = {{Tiobe}},
 	title = {The Java Programming Language},
 	year = {2014},
-	note = {\url{http://www.tiobe.com/index.php/content/paperinfo/tpci/Java.html}}
+	note = {\url{http://goo.gl/qi1Nk3}}
 }
 
 @article{nagappan_realizing_2008,
